<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="title">My Nanodegree Apps!</string>
    <string name="My_First_app">Spotify Streamer</string>
    <string name="My_Second_app">Scores App</string>
    <string name="My_Third_app">Library App</string>
    <string name="My_Fourth_app">Build It Bigger</string>
    <string name="My_Fifth_app">XYZ Reader</string>
    <string name="My_Dream_app">Capstone: My Own App</string>
</resources>
